# fenek

./: .gitignore  Cargo.toml  Makefile  README.md
compiler/ast/: Cargo.toml
compiler/ast/src/: ast.rs  lib.rs  visit.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: builder.rs  codegen.rs  ctx.rs  gen.rs  lib.rs  llvm.rs  module.rs  wrap.rs
compiler/error/: Cargo.toml
compiler/error/src/: lib.rs
compiler/fenec/: Cargo.toml
compiler/hir/: Cargo.toml
compiler/hir/src/: def.rs  hir.rs  lib.rs  ty.rs
compiler/ifenek/: Cargo.toml
compiler/ifenek/src/: main.rs
compiler/lex/: Cargo.toml
compiler/lex/src/: lexer.rs  lib.rs  scanner.rs  token.rs
compiler/lex/src/lexer/: tests.rs
compiler/lex/src/scanner/: tests.rs
compiler/lib_parse/: Cargo.toml
compiler/lib_parse/src/: lib.rs
compiler/lib_parse/src/lexer/: lexer.rs  mod.rs  scanner.rs  tests.rs  token.rs
compiler/lib_parse/src/lexer/lexer/: tests.rs
compiler/lib_parse/src/lexer/scanner/: tests.rs
compiler/lib_parse/src/syntax/: ast.rs  parser.rs
compiler/lib_parse/src/syntax/parser/: tests.rs
compiler/parse/: Cargo.toml
compiler/parse/src/: lib.rs  parser.rs
compiler/parse/src/lex/: lexer.rs  scanner.rs  token.rs
compiler/parse/src/lex/lexer/: tests.rs
compiler/parse/src/lex/scanner/: tests.rs
compiler/parse/src/lexer/: lexer.rs  token.rs
compiler/parse/src/lexer/lexer/: tests.rs
compiler/parse/src/parser/: tests.rs
compiler/parse/src/syntax/: ast.rs  parser.rs
compiler/parse/src/syntax/parser/: tests.rs
compiler/pos/: Cargo.toml
compiler/pos/src/: lib.rs  pos.rs  src_file.rs
compiler/printer/: Cargo.toml
compiler/printer/src/: lib.rs  printer.rs
compiler/printer/src/ast/: json.rs  mod.rs
compiler/printer/src/hir/: json.rs  mod.rs  ty.rs
compiler/printer/src/printer/: tests.rs
compiler/span/: Cargo.toml
compiler/span/src/: lib.rs
compiler/typeck/: Cargo.toml
compiler/typeck/src/: analyze.rs  arena.rs  finalize.rs  hir.rs  infer.rs  infer_ty.rs  lib.rs  lower.rs  mir.rs  scope.rs  tree.rs  ty.rs  typeck.rs
compiler/typeck/src/finalize/: tests.rs
compiler/typeck/src/typeck/: tests.rs
compiler/types/: Cargo.toml
compiler/types/src/: infer.rs  lib.rs  result.rs  solve.rs  solver.rs  ty.rs
compiler/types/src/infer/: arena.rs  mod.rs  solve.rs  ty.rs
compiler/types/src/infer/solve/: tests.rs
compiler/types/src/solve/: tests.rs
compiler/types/src/solver/: tests.rs
fenec/: Cargo.toml  README.md
fenec/src/: main.rs  opts.rs
ifenek/: .ifenek.history  Cargo.toml
ifenek/src/: main.rs  repl.rs
ifk/: Cargo.toml
ifk/src/: main.rs  repl.rs
samples/: a.fenek  a.hir  b.fenek  c.fenek  d.fenek  e.fenek  expr.fenek  f.fenek  function.fenek  parse_error.fenek  parse_error2.fenek  statements.fenek  type_error.fenek
src/fenec/: Cargo.toml
src/fenec_lexer/: Cargo.toml
src/fenec_lexer/src/: lexer.rs  lib.rs  scanner.rs  tests.rs  token.rs
