[package]
name = "fenec"
version = "0.1.0"
authors = ["Yuma Matsune <yuma.matsune@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
clap = "3.0.0-beta.2"
parse = { path = "../compiler/parse" }
typeck = { path = "../compiler/typeck" }
printer = { path = "../compiler/printer" }
codegen = { path = "../compiler/codegen" }

