[package]
name = "fenec"
version = "0.1.0"
authors = ["Yuma Matsune <yuma.matsune@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
typed-arena = "2.0.1"
clap = "3.0.0-beta.2"
ast = { path = "../compiler/ast" }
error = { path = "../compiler/error" }
# typeck = { path = "../compiler/typeck" }
# codegen = { path = "../compiler/codegen" }
pos = { path = "../compiler/pos" }
lex = { path = "../compiler/lex" }
parse = { path = "../compiler/parse" }

