[package]
name = "ifk"
version = "0.1.0"
authors = ["Yuma Matsune <yuma.matsune@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
libc = "0.2"
printer = { path = "../compiler/printer" }
codegen = { path = "../compiler/codegen" }
typeck = { path = "../compiler/typeck" }
parse = { path = "../compiler/parse" }

