[package]
name = "typeck"
version = "0.1.0"
authors = ["Yuma Matsune <yuma.matsune@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
num-traits = "0.2"
error = { path = "../error" }
parse = { path = "../parse" }
span = { path = "../span" }
ast = { path = "../ast" }
lex = { path = "../lex" }
